test: keep BrainVault tamper coverage on Java 8-compatible NIO